REGRESSION: r138555 asserts on Linux EFL/Qt debug builds https://bugs.webkit.org/show_bug.cgi?id=105848

Unreviewed test fix.

Patch by No'am Rosenthal <noam@webkit.org> on 2012-12-28

* platform/graphics/texmap/TextureMapperShaderManager.cpp:
    Added parameter name to noop shader.

Canonical link: https://commits.webkit.org/124042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138558 268f45cc-cd09-0410-ab3c-d52691b4dbfc